# CarConnectivity-connector-audi

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  SCRIPTS.md  pyproject.toml  release.sh  run-dev.sh  setup-dev.sh  setup_requirements.txt  test-setup.sh
.github/workflows/: pip-audit.yml  publish.yml  security-and-quality.yml  snyk-security.yml  test-build.yml
doc/: Config.md
src/carconnectivity_connectors/audi/: _version.py  capability.py  charging.py  climatization.py  command_impl.py  connector.py  specification.py  vehicle.py  warnings.py
src/carconnectivity_connectors/audi/auth/: audi_web_session.py  auth_util.py  openid_session.py  session_manager.py  we_connect_session_audi.py
src/carconnectivity_connectors/audi/auth/helpers/: blacklist_retry.py
src/carconnectivity_connectors/audi/ui/: connector_ui.py
tools/: 0_test_security_setup.sh  1 build-and-test.sh  1_build_and_test.sh  2 run-test.sh  auto-release.sh  release.sh  run.sh
